# pdf-bookmark

./: pdf.py  pyproject.toml  requirements.txt
pdf/: __main__.py  cli.py  get.py  set.py
pdf/core/: __init__.py  _get.py  _set.py  common.py
pdf_bookmark/: __main__.py  log.py
pdf_bookmark/core/: common.py
