[tool.poetry]
name = "pdf-bookmark"
version = "0.1.0"
description = ""
authors = ["Jason Swift <anemele@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pikepdf = "^8.8.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
